assets/css/style.css
body {
    margin: 0;
}

h1 {
    color: white;
    text-align: center;
    width: 225px;
    background-color: #4aaaa5;
    padding: 20px;
    margin: 0;
    display: inline-block;
    position: relative;
    left: 140px;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

hr {
    display: block;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: auto;
    margin-right: auto;
    border-style: insert;
    border-width: 1px;
    color: #dddddd;
}

header {
    position: relative;
    width: 100%;
    background-color: white;
    border-bottom: 1px solid #dddddd;
}


ul {
    list-style-type: none;
    margin: 0px;
    padding: 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    float: right;
    position: relative;
    right: 100px;
    top: 15px;
}

li a {
    display: inline-block;
    text-decoration: none;
    color: #777777;
    text-align: center;
    padding: 14px 14px;
    font-family: 'Georgia', Times, Times, serif;
}

li:hover {
    color: white;
    background-color: #4aaaa5;
    cursor: arrow;
}

h2 {
    color: #4aaaa5;
    padding: 5px;
}

p {
   color: #777777;
    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}


img {
    float: left;
    margin-right: 20px;
    margin-bottom: 20px;
    position: relative;
}

.me {
    background-color: white;
    width: 910px;
    margin: 0 auto 0 auto;
    margin-top: 15px;
    padding-right: 25px;
    padding-left: 25px;
}

footer {
    width: 100%;
    background-color: #666666;
    text-align: center;
    height: 50px;
    line-height:50px;
    position: fixed;
    bottom: 0;
    border-top: 10px solid #4aaaa5;
}

footer p {
    display: inline-block;
    vertical-align: bottom;
    color: white;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

input[type=text] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
}

#message {
    padding: 30px 80px;
}

input[type=button] {
    background-color: #4aaaa5;
    color: white;
    padding: 12px 20px;
    cursor: pointer;
    border: none;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.container {
    position: relative;
    float: left;
}

.top-left {
    position: absolute;
    line-height: 40px;
    color: white;
    height: 40px;
    width: 400px;
    background-color: #4aaaa5;
    top: 150px;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

.container2 {
    position: relative;
    float: right;
}

.top-right {
    position: absolute;
    color: white;
    line-height: 40px;
    height: 40px;
    width: 400px;
    background-color: #4aaaa5;
    top: 150px;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

.container3 {
    position: relative;
    float: left;
}

.middle-left {
    position: absolute;
    color: white;
    line-height: 40px;
    height: 40px;
    width: 400px;
    background-color: #4aaaa5;
    top: 150px;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

.container4 {
    position: relative;
    float: right;
    margin-left: -40px;
}

.middle-right {
    position: absolute;
    color: white;
    line-height: 40px;
    height: 40px;
    width: 400px;
    background-color: #4aaaa5;
    top: 150px;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

.container5 {
    position: relative;
    float: left;
}

.bottom {
    position: absolute;
    color: white;
    line-height: 40px;
    height: 40px;
    width: 400px;
    background-color: #4aaaa5;
    top: 150px;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif; 
}

.clear {
    clear: both;
}

